Dummy API Routing

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"name": "The name of the imageboard"
-	"api-enabled": "true"
+	"name": "The name of the imageboard",
+	"api-enabled": "true",
 	"port": "6969",
 	"debug": "true",
 	"version": "Early access alpha survival game",
