--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "^1",
     "ejs": "^2",
     "express": "^4",
+    "express-fileupload": "^0.1.2",
     "express-session": "^1",
     "mongodb": "^2"
   }
